check list validity before taking last item

also block for tabboxes *around* stackorder changes

BUG: 315528